--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="drawer_close">Close Drawer</string>
     <string name="upgrade_task">UPGRADE TASK</string>
     <string name="delete_task">DELETE TASK</string>
+    <string name="open_drawer">open drawer</string>
+    <string name="close_drawer">close drawer</string>
 </resources>
